Make sure gallery placeholder image is aligned properly

--- a/src/components/product-gallery/product-gallery.scss
+++ b/src/components/product-gallery/product-gallery.scss
@@ -65,6 +65,10 @@ $product-gallery_spinner-border-radius: $border-radius_base !default;
         position: static;
     }
 
+    &__placeholder-image {
+        text-align: center;
+    }
+
     &__loader {
         position: relative;
         width: 100%;
